<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/h"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/credit"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="@color/wt"
        android:gravity="center"
        android:id="@+id/creditText"
        android:layout_centerHorizontal="true"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/suprvisor"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/wt"
        android:gravity="center"
        android:id="@+id/supervisorTag"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/creditText"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/supervisorsName"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="@color/wt"
        android:gravity="center"
        android:id="@+id/supervisorName"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/supervisorTag"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/developerTag"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/wt"
        android:gravity="center"
        android:id="@+id/developerTAG"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/supervisorName"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/developerName"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="@color/wt"
        android:gravity="center"
        android:id="@+id/developerName"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/developerTAG"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Designer"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/wt"
        android:gravity="center"
        android:id="@+id/kushal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/developerName"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/designer"
        android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="@color/wt"
        android:gravity="center"

        android:layout_centerHorizontal="true"
        android:layout_below="@+id/kushal"
        />
</RelativeLayout>
